test-fixtures/machine-dsl-tests/tests/compile_fail/duplicate_transition_name.stderr
error: duplicate transition name `DoThing`
  --> tests/compile_fail/duplicate_transition_name.rs:32:20
   |
32 |         transition DoThing {
   |                    ^^^^^^^
